<resources>
    <string name="app_name">Puskesmas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="puskesmas_prambanan">PUSKESMAS PRAMBANAN</string>
    <string name="klaten">KLATEN</string>
    <string name="layanan_registrasi_online">LAYANAN REGISTRASI ONLINE</string>
    <string name="jangan_buang_waktu_anda">Jangan buang waktu anda</string>
    <string name="kami_sudah_bisa_online_loh">kami sudah bisa online loh ...</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="riwayat_pendaftaran">Riwayat Pendaftaran</string>
    <string name="jajaran_staf">Jajaran Staf</string>
    <string name="daftar">Daftar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_poli">nama poli</string>
    <string name="nomor_antrian_sekarang">Nomor Antrian Sekarang</string>
    <string name="poli_umum_melayani_masyarakat_yang_n_membutuhkan_pelayanan_kesehatan_umum">Poli Umum melayani masyarakat yang  \n membutuhkan pelayanan kesehatan Umum</string>
    <string name="umum">Umum</string>
    <string name="bpjs_belum_aktif">BPJS</string>

    <string name="hari_ini">Hari ini</string>
    <string name="reverse">Pesan</string>
    <string name="reverse_jika_premi_bpjs_lunas">Reverse jika premi BPJS lunas</string>
    <string name="pendaftaran_poli_umum">Pendaftaran Poli Umum</string>
    <string name="besok">Besok</string>
    <string name="belum_terpanggil">Belum Terpanggil</string>
    <string name="g232">G232</string>
    <string name="pendaftaran_poli_gigi">Pendaftaran Poli Gigi</string>
    <string name="poli_gigi_melayani_masyarakat_yang_n_membutuhkan_pelayanan_kesehatan_gigi">Poli Gigi melayani masyarakat yang \n  membutuhkan pelayanan kesehatan Gigi</string>
    <string name="poli_ibu_anak_melayani_masyarakat_yang_n_membutuhkan_pelayanan_kesehatan_ibu_anak">Poli Ibu dan Anak melayani masyarakat yang \n  membutuhkan pelayanan kesehatan Ibu dan Anak</string>
    <string name="poli_kb_melayani_masyarakat_yang_n_membutuhkan_pelayanan_kesehatan_kb">Poli KB melayani masyarakat yang \n  membutuhkan pelayanan KB</string>
    <string name="poli_imunisasi_melayani_masyarakat_yang_n_membutuhkan_pelayanan_imunisasi">Poli Imunisasi melayani masyarakat yang \n  membutuhkan pelayanan Imunisasi</string>
    <string name="nik_nomor_induk_kependudukan">NIK (Nomor Induk Kependudukan)</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="mr_id_dr_id_no_buku_biarkan_kosong">MR ID / DR ID / No Buku / Biarkan kosong</string>
    <string name="laki_laki">Laki laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tanggal_lahir_ex_10_10_1986">Tanggal lahir ex : 10/10/1986</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="no_telepon">No Telepon</string>
    <string name="jenis_pembayaran">Jenis Pembayaran</string>
    <string name="password">Password</string>
    <string name="u232">U232</string>
    <string name="masuk">masuk</string>
    <string name="lupa_kata_sandi">LUPA SANDI</string>
    <string name="daftar_besar">DAFTAR</string>
    <string name="nomor_antrian_anda">Nomor Antrian Anda</string>
    <string name="u233">U233</string>
    <string name="estimasi_waktu">Estimasi Waktu</string>
    <string name="_2_jam">2 JAM</string>
    <string name="mohon_tunjukan_nomor_ini_n_kepada_petugas_poli_yang_bersangkutan_n_sistem_ini_akan_memberitahu_anda_secara_otomatis_n_apabila_antrian_anda_sudah_mendekati">Mohon tunjukan nomor ini \n  kepada petugas poli yang bersangkutan \n  Sistem akan memberitahu secara otomatis \n  apabila antrian sudah mendekati</string>
    <string name="catatan">CATATAN</string>
    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="no_bpjs">No BPJS</string>
    <string name="verifikasi_indentitas">Verifikasi Indentitas</string>
    <string name="masukan_4_angka_yang_kalian_terima_n_pada_nomer_telepon_yang_telah_anda_n_cantumkan_saat_pendaftaran">Masukan 4 Angka yang kalian terima \n pada nomer telepon yang telah anda \n  cantumkan saat pendaftaran</string>
    <string name="validasi">Validasi</string>
    <string name="selesai">Selesai</string>
    <string name="g2">G2</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="cek_nik">Cek NIK</string>
</resources>
