<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.sandec.klinik.puskesmas.activities.LoginActivity">
    <ScrollView
        android:id="@+id/sv_login"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:paddingTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@drawable/logo_puskesma"
            android:layout_width="180dp"
            android:layout_height="180dp" />
        <TextView
            android:text="@string/puskesmas_prambanan"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_login_no_telp"
            android:hint="@string/no_telepon"
            android:inputType="phone"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_login_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_login"
            android:onClick="loginPuskesmas"
            android:layout_marginTop="20dp"
            android:text="@string/masuk"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_gravity="clip_horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/tv_login_lupa_pass"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/lupa_kata_sandi"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_login_daftar"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/daftar_besar"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
