<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="org.sandec.klinik.puskesmas.activities.PoliKiaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nomor_antrian_sekarang"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_nomor_antrian_poli_ibu_anak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textColor="#000000"
                        android:textSize="90sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/belum_terpanggil"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_no_antrian_poli_ibu_anak_blm_terpanggil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textColor="#000000"
                        android:textSize="80sp" />

                    <TextView
                        android:id="@+id/tv_detail_poli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/poli_ibu_anak_melayani_masyarakat_yang_n_membutuhkan_pelayanan_kesehatan_ibu_anak"
                        android:textColor="#000000" />




                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_nik_ibu_anak"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:hint="@string/nik_nomor_induk_kependudukan"
                        android:inputType="number"
                        android:maxLength="16" />




                    <TextView
                        android:id="@+id/tv_poli_cek_nik"
                        android:onClick="cekNIK"
                        android:gravity="bottom"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/cek_nik" />


                    <RadioGroup
                        android:id="@+id/rg_jenis_layanan_poli_ibu_anak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_umum_ibu_anak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="53dp"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:checked="true"
                            android:text="@string/umum"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/rb_bpjs_ibu_anak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="#f1d903"
                            android:text="@string/bpjs_belum_aktif"
                            android:textColor="#f1d903"
                            android:textSize="15sp" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/rg_tanggal_daftar_poli_ibu_anak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_daftar_hari_ini_ibu_anak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="50dp"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:checked="true"
                            android:text="@string/hari_ini"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/rb_daftar_besok_ibu_anak"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:text="@string/besok"
                            android:textSize="15sp" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/btn_daftar_poli_ibu_anak"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimaryDark"
                        android:onClick="daftarPoliGigi"
                        android:text="@string/reverse" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/reverse_jika_premi_bpjs_lunas"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </ScrollView>


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
